--- a/WELCOME.html
+++ b/WELCOME.html
@@ -9,6 +9,12 @@
             text-align: center;
             margin-top: 50px;
         }
+
+        #message {
+            font-size: 20px;
+            transition: color 0.3s;
+        }
+
         button {
             padding: 10px 15px;
             font-size: 16px;
@@ -20,13 +26,30 @@
 
     <h1>Hello, World!</h1>
     <p id="message">Click the button to change this text.</p>
+    <p id="count">Button clicked: 0 times</p>
 
     <button onclick="changeText()">Click Me</button>
 
     <script>
+        let clicks = 0;
+        let toggled = false;
+
         function changeText() {
-            document.getElementById("message").textContent =
-                "You clicked the button! 🎉";
+            clicks++;
+            const message = document.getElementById("message");
+
+            if (!toggled) {
+                message.textContent = "You clicked the button! 🎉";
+                message.style.color = "green";
+            } else {
+                message.textContent = "Click the button to change this text.";
+                message.style.color = "black";
+            }
+
+            document.getElementById("count").textContent =
+                "Button clicked: " + clicks + " times";
+
+            toggled = !toggled;
         }
     </script>
 
