--- a/WELCOME.html
+++ b/WELCOME.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>My First HTML Program</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
-        }
-
-        #message {
-            font-size: 20px;
-            transition: color 0.3s;
         }
 
         button {
@@ -22,34 +18,19 @@
         }
     </style>
 </head>
+
 <body>
 
     <h1>Hello, World!</h1>
+
     <p id="message">Click the button to change this text.</p>
-    <p id="count">Button clicked: 0 times</p>
 
     <button onclick="changeText()">Click Me</button>
 
     <script>
-        let clicks = 0;
-        let toggled = false;
-
         function changeText() {
-            clicks++;
-            const message = document.getElementById("message");
-
-            if (!toggled) {
-                message.textContent = "You clicked the button! 🎉";
-                message.style.color = "green";
-            } else {
-                message.textContent = "Click the button to change this text.";
-                message.style.color = "black";
-            }
-
-            document.getElementById("count").textContent =
-                "Button clicked: " + clicks + " times";
-
-            toggled = !toggled;
+            document.getElementById("message").textContent =
+                "You clicked the button! 🎉";
         }
     </script>
 
